tests/purs/failing/2874-forall.out
Error found:
at tests/purs/failing/2874-forall.purs:5:24 - 5:30 (line 5, column 24 - line 5, column 30)

  Unable to parse module:
  Unexpected token 'forall'


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

